# PointCloud

./: CMakeLists.txt
data/: noisy_cloud.pcd
src/: main.cpp
